# Coherent

./: LICENSE  README.md
doc/mwc/PostScript/: arnet.ps  arnetbig.ps  butterfly.ps  cubes.ps  cubes1.ps  driver.ps  envelope.mwc  flag.ps  fontdemo.ps  fontnames.ps  fontwidth.ps  fract_arrow.ps  geodesic.ps  horemis.ps  horemis2.ps  ijademo.ps  lhead.anne  lhead.fred  lhead.fred.bak  lhead.mwc  misc.ps  moire.ps  mwc.ps  mwc_biglogo.ps  mwc_poster.ps  peace.ps  poster.do  roaches.ps  rosette.ps  screen.ps  screen2.ps  soli.ps  solids.ps  spine.ps  spine.r  spiral.ps  square.ps  ssdodeca.ps  star.ps  titlepage.r
doc/mwc/PostScript/bbl/: Massage  Massage.bak
doc/mwc/PostScript/demos/: abc.ps  barchart.ps  biker.ps  cal2.ps  capabili.ps  circle.ps  fntpage.ps  newsltr.ps  paltest.ps  piechart.ps  pscal  star.ps
doc/mwc/PostScript/lib/: box.ps  caption.ps  caption2.ps  circle.ps  clipbox.ps  db.ps  drag.ps  letterhead.ps  misc.ps  multil.ps  multip.ps  mwc.ps  mwc2.ps  objshow.ps  objshowx.ps  outlinefont.ps  outlineshow.ps  pbc.ps  project.ps  san.ps  save.ps  vector.ps
doc/mwc/PostScript/manual/: Bind.tgz  arcoff.h.eps  ethernet.eps  ip_header.eps  olvwm.eps  olwm.eps  osi.eps  routing.eps  slip.eps  tcp_header.eps  tcpip.eps
doc/mwc/doc/: READ.ME
doc/mwc/doc/coherent/: Lexicon.files  Revision-10  Test  Test.eps  x.x11r5.tgz
doc/mwc/doc/csd/: READ.ME  Run.Z  Run.atari.Z  Run.atari.inde  Run.old.Z  Todo.Z  short.r.Z  shortatari.r.Z  shorthand.r.Z  source.win.tmp  tmac.roff.Z  top.r.Z  walt.r.Z
doc/mwc/doc/front.office/: READ.ME  source.tgz
doc/mwc/doc/mwc/: READ.ME
doc/mwc/doc/rdb/: READ.ME  Run.conindex.Z  Run.lex.Z  Run.manual.Z  Run.misc.Z  Run.text.Z  lookup2.Z  top.r.Z
doc/mwc/font/afm/: abil.afm.z  acce.afm.z  amte.afm.z  avac.afm.z  avacb.afm.z  avacbi.afm.z  avaci.afm.z  aval.afm.z  avalb.afm.z  avalbi.afm.z  avali.afm.z  ball.afm.z  bask.afm.z  baskb.afm.z  baskbi.afm.z  baski.afm.z  benj.afm.z  benjb.afm.z  bern.afm.z  bodo.afm.z  bodob.afm.z  bodobi.afm.z  bodoi.afm.z  bookb.afm.z  bookbi.afm.z  booki.afm.z  broa.afm.z  broab.afm.z  broabi.afm.z  cent.afm.z  centb.afm.z  centbi.afm.z  centi.afm.z  chal.afm.z  chalb.afm.z  chalbi.afm.z  chali.afm.z  chanb.afm.z  chanbi.afm.z  chani.afm.z  (+74 more)
doc/mwc/font/pcl/: Build_fwt  Century.tar.Z  Download  Download.h  Helv.tar.Z  Humanist.tar.Z  LP.tar.Z  Other.tar.Z  Prestige.tar.Z  Read_me  Times.tar.Z  etc.tar.Z  fwt.tar.Z
doc/mwc/font/pfb/: acce.pfb.z  amte.pfb.z  avac.pfb.z  avacb.pfb.z  avacbi.pfb.z  avaci.pfb.z  aval.pfb.z  avalb.pfb.z  avalbi.pfb.z  avali.pfb.z  ball.pfb.z  bask.pfb.z  (+80 more)
doc/mwc/src/: almanac.tgz  tmac.tgz  troff.tgz
mwc/: readme.txt
mwc/gtz/: hal.gtz
mwc/romana/relic/: Files
mwc/romana/relic/g/usr/lib/uucp/tay104/: BUILD  MANIFEST  Makefile  Makefile.in  chat.c  conf.h  conf.h.in  config.status  configure  configure.in  conn.c  copy.c  cu.1  cu.c  log.c  policy.h  prot.c  prote.c  protf.c  protg.c  proti.c  protj.c  prott.c  protz.c  rec.c  send.c  sysdep.h  tcp.c  time.c  tli.c  trans.c  tstuu.c  util.c  uuchk.c  uucico.8  uucico.c  uucico.c.mwcbb  uucico.c.orig  uuconv  uuconv.c  (+16 more)
mwc/romana/relic/g/usr/lib/uucp/tay104/RCS/: BUILD,v  COPYING,v  ChangeLog,v  MANIFEST,v  Makefile,v  Makefile.in,v  README,v  TODO,v  chat.c,v  conf.h,v  conf.h.in,v  configure,v  configure.in,v  conn.c,v  conn.h,v  copy.c,v  cu.1,v  cu.c,v  cu.h,v  getopt.h,v  log.c,v  policy.h,v  prot.c,v  prot.h,v  prote.c,v  protf.c,v  protg.c,v  proti.c,v  protj.c,v  prott.c,v  protz.c,v  rec.c,v  send.c,v  sysdep.h,v  sysh.unx,v  system.h,v  tcp.c,v  time.c,v  tli.c,v  trans.c,v  (+29 more)
mwc/romana/relic/g/usr/lib/uucp/tay104/lib/: Makefile  Makefile.in  parse.c
mwc/romana/relic/g/usr/lib/uucp/tay104/lib/RCS/: MANIFEST,v  Makefile,v  Makefile.in,v  bsrch.c,v  buffer.c,v  bzero.c,v  crc.c,v  debug.c,v  escape.c,v  getlin.c,v  getop1.c,v  getopt.c,v  memchr.c,v  memcmp.c,v  memcpy.c,v  parse.c,v  spool.c,v  status.c,v  strcas.c,v  strchr.c,v  strdup.c,v  strncs.c,v  strrch.c,v  strstr.c,v  strtol.c,v  xfree.c,v  xmall.c,v  xreall.c,v
mwc/romana/relic/g/usr/lib/uucp/tay104/unix/: Makefile  Makefile.in  cohtty.c  cusub.c  lock.c  picksb.c  serial.c  serial.orig  spool.c  statsb.c  work.c  xqtfil.c  xqtsub.c
mwc/romana/relic/g/usr/lib/uucp/tay104/unix/RCS/: MANIFEST,v  Makefile,v  Makefile.in,v  access.c,v  addbas.c,v  app3.c,v  app4.c,v  basnam.c,v  bytfre.c,v  chmod.c,v  cohtty.c,v  cohtty.orig,v  cusub.c,v  cwd.c,v  detach.c,v  dirent.c,v  dup2.c,v  efopen.c,v  epopen.c,v  exists.c,v  filnam.c,v  fsusg.c,v  fsusg.h,v  ftw.c,v  getcwd.c,v  indir.c,v  init.c,v  isdir.c,v  isfork.c,v  iswait.c,v  jobid.c,v  lcksys.c,v  link.c,v  locfil.c,v  lock.c,v  loctim.c,v  mail.c,v  mkdir.c,v  mkdirs.c,v  mode.c,v  (+39 more)
mwc/romana/relic/g/usr/lib/uucp/tay104/uuconf/: Makefile  Makefile.in  addblk.c  addstr.c  allblk.c  alloc.c  base.c  bool.c  callin.c  calout.c  chatc.c  cmdarg.c  cmdfil.c  cmdlin.c  debfil.c  deblev.c  diacod.c  dial.c  diasub.c  dnams.c  errno.c  errstr.c  filnam.c  freblk.c  fredia.c  free.c  freprt.c  fresys.c  grdcmp.c  hdial.c  hdnams.c  hinit.c  hlocnm.c  hport.c  hrmunk.c  hsinfo.c  hsnams.c  hsys.c  hunk.c  iniglb.c  (+47 more)
mwc/romana/relic/g/usr/lib/uucp/tay104/uuconf/RCS/: COPYING.LIB,v  MANIFEST,v  Makefile,v  Makefile.in,v  README,v  addblk.c,v  addstr.c,v  allblk.c,v  alloc.c,v  alloc.h,v  base.c,v  bool.c,v  callin.c,v  calout.c,v  chatc.c,v  cmdarg.c,v  cmdfil.c,v  cmdlin.c,v  debfil.c,v  deblev.c,v  diacod.c,v  dial.c,v  diasub.c,v  dnams.c,v  errno.c,v  errstr.c,v  filnam.c,v  freblk.c,v  fredia.c,v  free.c,v  freprt.c,v  fresys.c,v  grdcmp.c,v  hdial.c,v  hdnams.c,v  hinit.c,v  hlocnm.c,v  hport.c,v  hrmunk.c,v  hsinfo.c,v  (+54 more)
xybasic/src/XYBASIC/: MakeXYBsrc  _aux  benddisk  bendix  cam  camac1  camac2  cpm  driver  eval  finout  fmath  fnsops  fp9511  fp9511.truncated  fpbcd  index.html  initial  inout  isis2  nonst  packard  parsing  ram  rom  sdisk  stacks  states1  states2  states3  strings  tables  tokenize  version  version_cpm  version_cpm_9511  version_cpm_bcd  version_isis2  version_nonst  wild  (+6 more)
(+13536 files in other folders)
